# 2023_adhiraj_encdecPairwisePred

./: README.md  pyproject.toml
config/: main.yaml
src/: main.py
src/train/: __init__.py  trainer.py  vqTrainer.py
src/utils/: __init__.py  audio_features.py  audio_utils.py  dataclass.py  dataset.py  metrics.py
